--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,22 @@ p {
     margin: 0 auto;
 }
 
+header {
+    margin: 20px 0;
+    padding: 20px 0;
+}
+
+header nav {
+    margin: 20px 0;
+    display: inline-block;
+}
+
+header nav a {
+    margin-left: 90px;
+    text-decoration: none;
+    color: black;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
