Completed home page

--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@ header nav a {
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .middle-content .boxes .box {
